<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ari.itellu.RegistAct">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:src="@drawable/telu" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/oval"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval"
        android:hint="@string/hintpw"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_below="@+id/etPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/oval2"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvmember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/already_a_member"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/tvSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvmember"
        android:layout_alignBottom="@+id/tvmember"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/tvmember"
        android:layout_toRightOf="@+id/tvmember"
        android:text="Sign in!"
        android:textColor="#ffff" />

</RelativeLayout>
