<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ari.itellu.SignIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:src="@drawable/telu" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/oval"
        android:padding="10dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:hint="@string/hintuser"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/etusername"
        android:layout_alignStart="@+id/etusername"
        android:layout_below="@+id/etusername"
        android:layout_marginTop="15dp"
        android:background="@drawable/oval"
        android:hint="@string/hintpw"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_below="@+id/etpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/oval2"
        android:text="@string/txsign"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textColor="#ffff"
        android:text="Forgot Password?" />

    <TextView
        android:id="@+id/tvquest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/tvforgot"
        android:layout_marginTop="47dp"
        android:text="Don't have an account ?"
        android:textColor="#ffff" />

    <TextView
        android:id="@+id/tvregist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvquest"
        android:layout_alignBottom="@+id/tvquest"
        android:layout_toEndOf="@+id/tvforgot"
        android:layout_toRightOf="@+id/tvforgot"
        android:textColor="#ffff"
        android:text="Sign Up!" />


</RelativeLayout>
